--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,6 +1,6 @@
 #container {
 	position: absolute;
-	top: 60px;
+	top: 10px;
 	bottom: 0px;
 	left: 0;
 	right: 0;
@@ -56,7 +56,8 @@
 }
 #workers-panel {
 	bottom: 210px;
-	top: 160px;
+/*	top: 160px; */
+	top: 0;
 }
 #workers-panel>.panel-body {
 	bottom: 0;
