--- a/public/templates/game/layout.html
+++ b/public/templates/game/layout.html
@@ -1,11 +1,3 @@
-<nav class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-			<a href="#" class="navbar-brand">Project Simulation Game</a>
-		</div>
-	</div>
-</nav>
-
 <div id="container" class="">
 	
 </div>
@@ -31,3 +23,11 @@
 		</div>
 	</div>
 </div>
+
+<div id="modal-random-event" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+		</div>
+	</div>
+</div>
+
